Increase fontsize a bit in output checker

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Output Data Verification Viewer</title>
+<style>
+  pre {
+    font-size: 1.1em;
+  }
+</style>
 </head>
 
 <body>
