Add 'Open Card Image' button to output checker

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -43,6 +43,8 @@
 <hr>
 <pre id="cardJson"></pre>
 <script type="module">
+<hr>
+<a href="#" onclick="openCardImage(); return false;">Open card image</a>
 let cardsJson = {"cards": []};
 
 let languageCode = "en";
