Fix links not working in output checker

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -42,9 +42,9 @@
 <pre id="flavorText"></pre>
 <hr>
 <pre id="cardJson"></pre>
-<script type="module">
 <hr>
 <a href="#" onclick="openCardImage(); return false;">Open card image</a>
+<script>
 let cardsJson = {"cards": []};
 
 let languageCode = "en";
