In output checker, change language with keyboard shortcuts

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -88,7 +88,15 @@ function handleKeyPress(e) {
 			changeDisplayedIndex(-1);
 		} else if (e.key === "ArrowRight") {
 			changeDisplayedIndex(1);
-		}
+		} else if (e.key === "e") {
+      setLanguage("en");
+    } else if (e.key === "f") {
+      setLanguage("fr");
+    } else if (e.key === "d" || e.key === "g") {
+      setLanguage("de");
+    } else if (e.key === "i") {
+      setLanguage("it");
+    }
 	}
 }
 
