In output checker, make index and id fields numeric

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -16,11 +16,11 @@
 <a href="#" onclick="changeDisplayedIndex(-1); return false;">Previous</a>
 <form id="indexForm" name="indexForm">
 	<span>Index: </span>
-	<input id="currentIndex" type="text" placeholder="0" style="max-width: 5em;" />
+	<input id="currentIndex" type="number" placeholder="0" style="max-width: 5em;" />
 </form>
 <form id="cardIdForm" name="cardIdForm">
 	<span>ID: </span>
-	<input id="cardId" type="text" placeholder="1" style="max-width: 5em;" />
+	<input id="cardId" type="number" placeholder="1" style="max-width: 5em;" />
 </form>
 <div>
 	<span>Max index: </span>
