In output verifier, fix error when switching languages when on high index
This happened when you were past the highest index on the new language you wanted to load

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -155,7 +155,7 @@ document.getElementById("dropLocation").addEventListener("drop", (event) => {
 	const file = event.dataTransfer.items[0].getAsFile();
 	file.text().then((fileText) => {
 		cardsJson = JSON.parse(fileText);
-    setLanguage(cardsJson["metadata"]["language"]);
+    languageCode = cardsJson["metadata"]["language"];
 		maxIndex = cardsJson["cards"].length - 1;
 		if (currentIndex <= maxIndex) {
 			setDisplayedIndex(currentIndex);
