In output checker, simplify handling when past max index
Also now default to the highest available index,
instead of the lowest

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -157,11 +157,7 @@ document.getElementById("dropLocation").addEventListener("drop", (event) => {
 		cardsJson = JSON.parse(fileText);
     languageCode = cardsJson["metadata"]["language"];
 		maxIndex = cardsJson["cards"].length - 1;
-		if (currentIndex <= maxIndex) {
-			setDisplayedIndex(currentIndex);
-		} else {
-			setDisplayedIndex(0);
-		}
+    setDisplayedIndex(Math.min(currentIndex, maxIndex));
 		document.getElementById("maxIndex").textContent = maxIndex;
 		document.getElementById("maxId").textContent = cardsJson["cards"][maxIndex]["id"];
 	}).catch((error) => console.log("An error occurred: %o", error));
