--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -18,6 +18,7 @@
 	<span>Index: </span>
 	<input id="currentIndex" type="number" placeholder="0" style="max-width: 5em;" />
 </form>
+<a href="#" onclick="changeToRandomIndex(); return false;">Random</a>
 <form id="cardIdForm" name="cardIdForm">
 	<span>ID: </span>
 	<input id="cardId" type="number" placeholder="1" style="max-width: 5em;" />
@@ -88,6 +89,9 @@ function setDisplayedIndex(newIndex) {
   document.getElementById("currentIndex").blur();
   document.getElementById("cardId").blur();
   document.title = `Output Data Verification Viewer | ${currentCardData["id"]} ${currentCardData["fullName"]}`;
+}
+function changeToRandomIndex() {
+  setDisplayedIndex(Math.floor(Math.random() * maxIndex));
 }
 function handleKeyPress(e) {
 	if (!e.repeat) {
