In output verifier, simplify 'Open card image'
Why use Javascript when you can just set the href

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -50,7 +50,7 @@
 <hr>
 <pre id="cardJson"></pre>
 <hr>
-<a href="#" onclick="openCardImage(); return false;">Open card image</a>
+<a id="cardImageLink" href="#" target="_blank">Card Image</a> || 
 <script>
 let cardsJson = {"cards": []};
 
@@ -82,6 +82,7 @@ function setDisplayedIndex(newIndex) {
 	document.getElementById("cardJson").textContent = JSON.stringify(currentCardData, null, "\t");
 	document.getElementById("currentIndex").value = currentIndex;
 	document.getElementById("cardId").value = currentCardData["id"];
+  document.getElementById("cardImageLink").href = currentCardData["images"]["full"];
   // Some 'fullText' goes off the screen, creating a scrollbar. Pressing left or right both scrolls and changes index. Reset horizontal scroll after changing index so we don't start a new image scrolled
   document.scrollLeft = 0;
   document.getElementById("text").scrollLeft = 0;
@@ -112,10 +113,6 @@ function handleKeyPress(e) {
   if (e.key == "ArrowLeft" || e.key == "ArrowRight") {
     e.preventDefault();
   }
-}
-
-function openCardImage() {
-  window.open(cardsJson["cards"][currentIndex]["images"]["full"], "_blank");
 }
 
 function setLanguage(newLanguageCode) {
