In output verifier, add 'r' to show random card
Sometimes useful for debugging something

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -108,6 +108,8 @@ function handleKeyPress(e) {
       setLanguage("de");
     } else if (e.key === "i") {
       setLanguage("it");
+    } else if (e.key === "r") {
+      changeToRandomIndex();
     }
 	}
   if (e.key == "ArrowLeft" || e.key == "ArrowRight") {
