--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -136,8 +136,8 @@ function handleKeyPress(e) {
 			changeToRandomIndex();
 		} else if (e.key === "Escape" && !isNotInInputField()) {
 			document.activeElement.blur();
-		} else if (!isNaN(+e.key)) {
-			// When a number is pressed, focus the 'Card ID' input field, and let the number be typed in there
+		} else if (e.key === "Backspace" || !isNaN(+e.key)) {
+			// When a number or Backspace is pressed, focus the 'Card ID' input field, and let the key be typed in there
 			document.getElementById("cardId").focus();
 		}
 	}
