--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<div id="dropLocation" style="background-color: lightgreen; width: 100%; height: 100px;"><b style="text-align: center;">Drag JSON here</b></div>
+<div id="dropLocation" style="background-color: lightgreen; width: 100%; height: 100px;"><b style="text-align: center;">Drag JSON here</b><br /><span id="metadataDisplay" /></div>
 <a href="#" onclick="changeDisplayedIndex(-1); return false;">Previous</a>
 <form id="indexForm" name="indexForm">
 	<span>Index: </span>
@@ -207,6 +207,7 @@ document.getElementById("dropLocation").addEventListener("drop", (event) => {
 		setDisplayedIndex(Math.min(targetIndex, maxIndex));
 		document.getElementById("maxIndex").textContent = maxIndex;
 		document.getElementById("maxId").textContent = cardsJson["cards"][maxIndex]["id"];
+		document.getElementById("metadataDisplay").textContent = cardsJson["metadata"]["generatedOn"];
 	}).catch((error) => console.log("An error occurred: %o", error));
 });
 </script>
