--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -52,9 +52,13 @@ Cost: <span id="cost-value"></span> | Inkwell: <span id="inkwell-value"></span> 
 <hr>
 <pre id="cardJson"></pre>
 <hr>
-<a id="cardImageLink" href="#" target="_blank">Card Image</a> || 
-<a id="cardmarketLink" href="#" target="_blank" style="text-decoration-line: line-through;">Cardmarket</a> || 
-<a id="cardTraderLink" href="#" target="_blank" style="text-decoration-line: line-through;">CardTrader</a> || 
+<a id="cardImageLink" href="#" target="_blank">Card Image</a> ||
+<a id="enchantedLink" href="#" onclick="goToIdOfField('enchantedId'); return false;">Enchanted</a> |
+<a id="nonEnchantedLink" href="#" onclick="goToIdOfField('nonEnchantedId'); return false;">Non-Enchanted</a> |
+<a id="promoLink" href="#" onclick="goToId(cardsJson['cards'][currentIndex]['promoIds'][0]); return false;">First Promo</a> |
+<a id="nonPromoLink" href="#" onclick="goToIdOfField('nonPromoId'); return false;">Non-Promo</a> ||
+<a id="cardmarketLink" href="#" target="_blank" style="text-decoration-line: line-through;">Cardmarket</a> |
+<a id="cardTraderLink" href="#" target="_blank" style="text-decoration-line: line-through;">CardTrader</a> |
 <a id="tcgPlayerLink" href="#" target="_blank" style="text-decoration-line: line-through;">TcgPlayer</a>
 <script>
 let cardsJson = {"cards": []};
@@ -116,6 +120,21 @@ function setDisplayedIndex(newIndex, showErrorMessage=true) {
 	document.getElementById("cardId").blur();
 	document.title = `Output Data Verification Viewer | ${currentCardData["id"]} ${currentCardData["fullName"]}`;
 }
+function goToId(targetId) {
+	for (let cardIndex = maxIndex; cardIndex >= 0; cardIndex--) {
+		if (cardsJson["cards"][cardIndex]["id"] === targetId) {
+			setDisplayedIndex(cardIndex);
+			return;
+		}
+	}
+	alert("ID not found");
+}
+function goToIdOfField(fieldName) {
+	const currentCardData = cardsJson["cards"][currentIndex];
+	if (currentCardData.hasOwnProperty(fieldName)) {
+		goToId(currentCardData[fieldName]);
+	}
+}
 function updateExternalLink(linkId, externalLinkData, externalLinkName) {
 	const linkElement = document.getElementById(linkId);
 	if (externalLinkData[externalLinkName]) {
@@ -176,19 +195,7 @@ document.getElementById("indexForm").addEventListener("submit", (event) => {
 document.getElementById("cardIdForm").addEventListener("submit", (event) => {
 	event.preventDefault();
 	let targetId = parseInt(document.getElementById("cardId").value, 10);
-	// Try to find the specified index in the card list
-	let targetIndex = -1;
-	for (let cardIndex = maxIndex; cardIndex >= 0; cardIndex--) {
-		if (cardsJson["cards"][cardIndex]["id"] === targetId) {
-			targetIndex = cardIndex;
-			break;
-		}
-	}
-	if (targetIndex === -1) {
-		alert("ID not found");
-	} else {
-		setDisplayedIndex(targetIndex);
-	}
+	goToId(targetId);
 	return false;
 });
 
