--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -19,18 +19,16 @@
 	<form id="indexForm" name="indexForm">
 		<span>Index: </span>
 		<input id="currentIndex" type="number" placeholder="0" min="0" style="max-width: 5em;" />
+		<span> / </span>
+		<span id="maxIndex">0</span>
 	</form>
 	<a href="#" onclick="changeToRandomIndex(); return false;">Random</a>
 	<form id="cardIdForm" name="cardIdForm">
 		<span>ID: </span>
 		<input id="cardId" type="number" placeholder="1" min="1" style="max-width: 5em;" />
-	</form>
-	<div>
-		<span>Max index: </span>
-		<span id="maxIndex">0</span>
-		<span>Max ID: </span>
+		<span> / </span>
 		<span id="maxId">0</span>
-	</div>
+	</form>
 	<a href="#" onclick="changeDisplayedIndex(1); return false;">Next</a>
 </div>
 
