Add horizontal scrollbar to data display

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -52,7 +52,7 @@
 <hr>
 Cost: <span id="cost-value"></span> | Inkwell: <span id="inkwell-value"></span> | Movecost: <span id="moveCost-value"></span> | Strength: <span id="strength-value"></span> | Willpower: <span id="willpower-value"></span> | Lore: <span id="lore-value"></span>
 <hr>
-<pre id="cardJson"></pre>
+<pre id="cardJson" style="overflow-x: scroll;"></pre>
 <hr>
 <a id="cardImageLink" href="#" target="_blank">Card Image</a> ||
 <a id="enchantedLink" href="#" onclick="goToIdOfField('enchantedId'); return false;">Enchanted</a> |
