--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -15,6 +15,7 @@
 <div id="dropLocation" style="background-color: lightgreen; width: 100%; height: 100px;"><b style="text-align: center;">Drag JSON here</b><br /><span id="metadataDisplay" /></div>
 
 <div style="display: flex; gap: 1em; align-items: center;">
+	<a href="#" onclick="goToPreviousSet(); return false;">Previous Set</a>
 	<a href="#" onclick="changeDisplayedIndex(-1); return false;">Previous</a>
 	<form id="indexForm" name="indexForm">
 		<span>Index: </span>
@@ -30,6 +31,7 @@
 		<span id="maxId">0</span>
 	</form>
 	<a href="#" onclick="changeDisplayedIndex(1); return false;">Next</a>
+	<a href="#" onclick="goToNextSet(); return false;">Next Set</a>
 </div>
 
 <hr>
@@ -135,6 +137,24 @@ function goToIdOfField(fieldName) {
 	const currentCardData = cardsJson["cards"][currentIndex];
 	if (currentCardData.hasOwnProperty(fieldName)) {
 		goToId(currentCardData[fieldName]);
+	}
+}
+function goToPreviousSet() {
+	const currentSetCode = cardsJson["cards"][currentIndex]["setCode"];
+	for (let i = currentIndex; i >= 0; --i) {
+		if (cardsJson["cards"][i]["setCode"] !== currentSetCode) {
+			setDisplayedIndex(i);
+			return;
+		}
+	}
+}
+function goToNextSet() {
+	const currentSetCode = cardsJson["cards"][currentIndex]["setCode"];
+	for (let i = currentIndex; i <= maxIndex; ++i) {
+		if (cardsJson["cards"][i]["setCode"] !== currentSetCode) {
+			setDisplayedIndex(i);
+			return;
+		}
 	}
 }
 function updateExternalLink(linkId, externalLinkData, externalLinkName) {
