In OutputViewer, improve 'isNotInInputField' check
Now it also works after clicking a link,
without first having to click on the background

--- a/output/OutputFileViewer.html
+++ b/output/OutputFileViewer.html
@@ -197,7 +197,10 @@ function handleKeyPress(e) {
 	}
 }
 function isNotInInputField() {
-	return document.activeElement === null || document.activeElement === document.body;
+	if (document.activeElement === null || document.activeElement === document.body) {
+		return true;
+	}
+	return document.activeElement !== document.getElementById("currentIndex") && document.activeElement !== document.getElementById("cardId");
 }
 
 function setLanguage(newLanguageCode) {
