--- a/OutputGeneration/OutputFileViewer.html
+++ b/OutputGeneration/OutputFileViewer.html
@@ -59,8 +59,8 @@ Cost: <span id="cost-value"></span> | Inkwell: <span id="inkwell-value"></span> 
 <a id="cardImageLink" href="#" target="_blank">Card Image</a> ||
 <a id="enchantedLink" href="#" onclick="goToIdOfField('enchantedId'); return false;">Enchanted</a> |
 <a id="nonEnchantedLink" href="#" onclick="goToIdOfField('nonEnchantedId'); return false;">Non-Enchanted</a> |
-<a id="promoLink" href="#" onclick="goToId(cardsJson['cards'][currentIndex]['promoIds'][0]); return false;">First Promo</a> |
-<a id="nonPromoLink" href="#" onclick="goToIdOfField('nonPromoId'); return false;">Non-Promo</a> ||
+<a id="promoLink" href="#" onclick="goToIdOfField('promoIds', true); return false;">First Promo</a> |
+<a id="nonPromoLink" href="#" onclick="goToIdOfField('nonPromoId'); return false;">Non-Promo</a> |
 <a id="cardmarketLink" href="#" target="_blank" style="text-decoration-line: line-through;">Cardmarket</a> |
 <a id="cardTraderLink" href="#" target="_blank" style="text-decoration-line: line-through;">CardTrader</a> |
 <a id="tcgPlayerLink" href="#" target="_blank" style="text-decoration-line: line-through;">TcgPlayer</a>
@@ -133,10 +133,14 @@ function goToId(targetId) {
 	}
 	alert("ID not found");
 }
-function goToIdOfField(fieldName) {
+function goToIdOfField(fieldName, goToFirstEntryOfList=false) {
 	const currentCardData = cardsJson["cards"][currentIndex];
 	if (currentCardData.hasOwnProperty(fieldName)) {
-		goToId(currentCardData[fieldName]);
+		if (goToFirstEntryOfList) {
+			goToId(currentCardData[fieldName][0]);
+		} else {
+			goToId(currentCardData[fieldName]);
+		}
 	}
 }
 function goToPreviousSet() {
