In OutputViewer, add ID to 'not found' error

--- a/OutputGeneration/OutputFileViewer.html
+++ b/OutputGeneration/OutputFileViewer.html
@@ -131,7 +131,7 @@ function goToId(targetId) {
 			return;
 		}
 	}
-	alert("ID not found");
+	alert("ID " + targetId + " not found");
 }
 function goToIdOfField(fieldName, goToFirstEntryOfList=false) {
 	const currentCardData = cardsJson["cards"][currentIndex];
