Add 'reprintedAsIds' and 'reprintOfId' fields

--- a/OutputGeneration/OutputFileViewer.html
+++ b/OutputGeneration/OutputFileViewer.html
@@ -61,6 +61,8 @@ Cost: <span id="cost-value"></span> | Inkwell: <span id="inkwell-value"></span> 
 <a id="nonEnchantedLink" href="#" onclick="goToIdOfField('nonEnchantedId'); return false;">Non-Enchanted</a> |
 <a id="promoLink" href="#" onclick="goToIdOfField('promoIds', true); return false;">First Promo</a> |
 <a id="nonPromoLink" href="#" onclick="goToIdOfField('nonPromoId'); return false;">Non-Promo</a> |
+<a id="reprintedAsLink" href="#" onclick="goToIdOfField('reprintedAsIds', true); return false;">First Reprint</a> |
+<a id="reprintOfLink" href="#" onclick="goToIdOfField('reprintOfId'); return false;">Original print</a> ||
 <a id="cardmarketLink" href="#" target="_blank" style="text-decoration-line: line-through;">Cardmarket</a> |
 <a id="cardTraderLink" href="#" target="_blank" style="text-decoration-line: line-through;">CardTrader</a> |
 <a id="tcgPlayerLink" href="#" target="_blank" style="text-decoration-line: line-through;">TcgPlayer</a>
