In OutputFileViewer, use new 'baseId' field

--- a/OutputGeneration/OutputFileViewer.html
+++ b/OutputGeneration/OutputFileViewer.html
@@ -57,10 +57,11 @@ Cost: <span id="cost-value"></span> | Inkwell: <span id="inkwell-value"></span> 
 <pre id="cardJson" style="overflow-x: scroll;"></pre>
 <hr>
 <a id="cardImageLink" href="#" target="_blank">Card Image</a> ||
+<a id="baseCardLink" href="#" onclick="goToIdOfField('baseId'); return false;">Base card</a> |
+<a id="epicLink" href="#" onclick="goToIdOfField('epicId'); return false;">Epic</a> |
 <a id="enchantedLink" href="#" onclick="goToIdOfField('enchantedId'); return false;">Enchanted</a> |
-<a id="nonEnchantedLink" href="#" onclick="goToIdOfField('nonEnchantedId'); return false;">Non-Enchanted</a> |
+<a id="iconicLink" href="#" onclick="goToIdOfField('iconicId'); return false;">Iconic</a> |
 <a id="promoLink" href="#" onclick="goToIdOfField('promoIds', true); return false;">First Promo</a> |
-<a id="nonPromoLink" href="#" onclick="goToIdOfField('nonPromoId'); return false;">Non-Promo</a> |
 <a id="reprintedAsLink" href="#" onclick="goToIdOfField('reprintedAsIds', true); return false;">First Reprint</a> |
 <a id="reprintOfLink" href="#" onclick="goToIdOfField('reprintOfId'); return false;">Original print</a> ||
 <a id="cardmarketLink" href="#" target="_blank" style="text-decoration-line: line-through;">Cardmarket</a> |
