Fix 'Browse' button in OutputFileViewer

--- a/OutputGeneration/OutputFileViewer.html
+++ b/OutputGeneration/OutputFileViewer.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-<div id="dropLocation" style="background-color: lightgreen; width: 100%; height: 100px;"><b style="text-align: center;">Drag JSON here</b><br /><span id="metadataDisplay" />
+<div id="dropLocation" style="background-color: lightgreen; width: 100%; height: 100px;">
+	<b style="text-align: center;">Drag JSON here</b>
+	<br />
+	<div id="metadataDisplay"></div>
 	<input type="file" id="browseForFile" accept=".json">
 </div>
 
