In OutputViewer, move 'subtypes' to numbers row
Bit easier to read the subtypes and the story this way

--- a/OutputGeneration/OutputFileViewer.html
+++ b/OutputGeneration/OutputFileViewer.html
@@ -40,7 +40,7 @@
 </div>
 
 <hr>
-<span id="name"></span> <span style="color: lightgrey">from</span> <span id="story"></span> || <span id="subtypes"></span>
+<span id="name"></span> <span style="color: lightgrey">from</span> <span id="story"></span>
 <hr>
 <div>
 	<span>
@@ -58,7 +58,8 @@
 <pre id="flavorText"></pre>
 <hr>
 Cost: <span id="cost-value"></span> | Inkwell: <span id="inkwell-value"></span> | Movecost: <span id="moveCost-value"></span> | Strength: <span id="strength-value"></span> | Willpower: <span id="willpower-value"></span> | Lore: <span id="lore-value"></span> ||
-Abilities: <span id="abilities-count"></span> | Effects: <span id="effects-count"></span>
+Abilities: <span id="abilities-count"></span> | Effects: <span id="effects-count"></span> ||
+Subtypes: <span id="subtypes"></span>
 <hr>
 <pre id="cardJson" style="overflow-x: scroll;"></pre>
 <hr>
@@ -114,7 +115,7 @@ function setDisplayedIndex(newIndex, showErrorMessage=true) {
 	document.getElementById("cardId").value = currentCardData["id"];
 	document.getElementById("cardImageLink").href = currentCardData["images"]["full"];
 	document.getElementById("story").textContent = currentCardData["story"] ? currentCardData["story"] : "???";
-	document.getElementById("subtypes").textContent = currentCardData["subtypesText"] ? currentCardData["subtypesText"] : "[no subtypes]";
+	document.getElementById("subtypes").textContent = currentCardData["subtypesText"] ? currentCardData["subtypesText"] : "-";
 	for (const fieldname of ["cost", "inkwell", "moveCost", "strength", "willpower", "lore"]) {
 		document.getElementById(fieldname + "-value").textContent = currentCardData[fieldname] === undefined ? "-" : currentCardData[fieldname];
 	}
